Fix air filter GUI and tick accounting; add Gonzo painting and sound scaffold
Co-authored-by: arena-agent <297053741+arena-agent@users.noreply.github.com>